--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
 
-  <!-- <div style="width: 40%; height: 500px; margin: 0 auto;">
+  <div
+    style="width: 100%; height: 300px; margin: 0 auto; display: flex; gap: 10px; flex-direction: column; border: 1px solid red;">
     <zine-viewer id="zine-viewer">
       <div img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/FRONT.jpg"
         back-img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/1.jpg">
@@ -26,7 +27,22 @@
         back-img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/BACK.jpg">
       </div>
     </zine-viewer>
-  </div> -->
+
+    <zine-viewer id="zine-viewer">
+      <div img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/FRONT.jpg"
+        back-img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/1.jpg">
+      </div>
+      <div img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/2.jpg"
+        back-img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/3.jpg">
+      </div>
+      <div img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/4.jpg"
+        back-img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/5.jpg">
+      </div>
+      <div img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/6.jpg"
+        back-img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/BACK.jpg">
+      </div>
+    </zine-viewer>
+  </div>
 
   <div style="width: 300px; height: 300px; outline: 1px solid orange;">
     <zine-viewer id="zine-viewer">
