--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div
     style="width: 100%; height: 300px; margin: 0 auto; display: flex; gap: 10px; flex-direction: column; border: 1px solid red;">
-    <zine-viewer id="zine-viewer">
+    <zine-viewer>
       <div img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/FRONT.jpg"
         back-img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/1.jpg">
       </div>
@@ -28,7 +28,7 @@
       </div>
     </zine-viewer>
 
-    <zine-viewer id="zine-viewer">
+    <zine-viewer>
       <div img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/FRONT.jpg"
         back-img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/1.jpg">
       </div>
@@ -45,7 +45,7 @@
   </div>
 
   <div style="width: 300px; height: 300px; outline: 1px solid orange;">
-    <zine-viewer id="zine-viewer">
+    <zine-viewer>
       <div img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/FRONT.jpg"
         back-img-src="https://res.cloudinary.com/joelmturner/image/upload/v1736665494/zines/pick%20me%20ups/1.jpg">
       </div>
