--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
     ];
   </script>
 
+  <h2>Multiple Zines test</h2>
   <div
     style="width: 100%; height: 300px; margin: 0 auto; display: flex; gap: 10px; flex-direction: column; border: 1px solid red;">
     <zine-viewer id="zine1"></zine-viewer>
     <zine-viewer id="zine2"></zine-viewer>
   </div>
 
+  <h2>Keyboard Navigation Focus Only</h2>
   <div style="width: 300px; height: 300px; outline: 1px solid orange;">
-    <zine-viewer id="zine3"></zine-viewer>
+    <zine-viewer id="zine3" keyboard-navigation-focus-only></zine-viewer>
   </div>
 
   <script>
